--- a/src/component/main/index.module.less
+++ b/src/component/main/index.module.less
@@ -1,10 +1,11 @@
 #main {
     height: 85%;
-    width: 400px;
+    width: 375px;
     border-radius: 10px;
     background-color: aqua;
+    margin-right: 8px;
 }
-@media screen and (max-height: 600px) {
+@media screen and (max-height: 650px) {
     #main {
         height: 100%;
     }
