'UI基本框架搭建完成'

--- a/src/component/main/index.module.css
+++ b/src/component/main/index.module.css
@@ -1,7 +1,10 @@
 #main {
+  display: flex;
+  flex-direction: column;
   height: 85%;
   width: 375px;
   border-radius: 10px;
+  overflow: hidden;
   background-color: aqua;
   margin-right: 8px;
 }
