--- a/src/component/main/index.module.less
+++ b/src/component/main/index.module.less
@@ -1,10 +1,14 @@
 #main {
+    display: flex;
+    flex-direction: column;
     height: 85%;
     width: 375px;
     border-radius: 10px;
+    overflow: hidden;
     background-color: aqua;
     margin-right: 8px;
 }
+
 @media screen and (max-height: 650px) {
     #main {
         height: 100%;
