--- a/src/index.moudle.css
+++ b/src/index.moudle.css
@@ -11,3 +11,10 @@ body,
 html {
   padding: 10px 0;
 }
+.icon {
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: -0.15em;
+  fill: white;
+  overflow: hidden;
+}
