--- a/src/index.moudle.less
+++ b/src/index.moudle.less
@@ -9,3 +9,10 @@ html, body, #root {
 html {
     padding: 10px 0;
 }
+.icon {
+    width: 1.5em;
+    height: 1.5em;
+    vertical-align: -0.15em;
+    fill: white;
+    overflow: hidden;
+}
