--- a/src/app.module.less
+++ b/src/app.module.less
@@ -2,4 +2,10 @@
     height: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
+    // 禁止选中文字
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select:none;
+    background-image: linear-gradient(to right,rgb(221, 196, 212), rgb(196, 203, 239));
 }
