--- a/src/component/header/index.module.less
+++ b/src/component/header/index.module.less
@@ -9,9 +9,12 @@
     color: white;
     border-bottom: 1px solid #ccc;
     padding: 0 10px;
-    // svg {
-    //     width: 40px;
-    // }
+    background: linear-gradient(to right, rgb(33, 118, 237), rgb(104, 170, 244));
+    svg {
+        &:hover{
+            cursor: pointer;
+        }
+    }
 }
 .title {
     justify-self: center;
