--- a/src/app.module.css
+++ b/src/app.module.css
@@ -2,4 +2,9 @@
   height: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  background-image: linear-gradient(to right, #ddc4d4, #c4cbef);
 }
