--- a/src/component/address_list/AddressItem/index.module.css
+++ b/src/component/address_list/AddressItem/index.module.css
@@ -1,6 +1,14 @@
 .wrap {
+  position: relative;
   height: 50px;
   margin: 10px;
+  background-color: white;
+  border-radius: 7px;
+  padding: 4px;
+  box-sizing: content-box;
+}
+.wrap:hover {
+  filter: drop-shadow(2px 2px 10px black);
 }
 .left {
   display: inline-block;
@@ -14,6 +22,12 @@
   height: 44px;
   border-radius: 50%;
   object-fit: fill;
+}
+.hidden {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
 }
 .right {
   display: inline-block;
