--- a/src/component/address_list/AddressItem/index.module.less
+++ b/src/component/address_list/AddressItem/index.module.less
@@ -1,8 +1,16 @@
 @lineHeight: 50px;
 @height: 44px;
 .wrap {
+    position: relative;
     height: @lineHeight;
     margin: 10px;
+    background-color: white;
+    border-radius: 7px;
+    padding: 4px;
+    box-sizing: content-box;
+    &:hover {
+        filter: drop-shadow(2px 2px 10px black);
+    }
 }
 .left {
     display: inline-block;
@@ -16,6 +24,12 @@
         border-radius: 50%;
         object-fit: fill;
     }
+}
+.hidden {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0; // 隐藏元素
 }
 .right {
     @marginLeft: 10px;
