--- a/src/component/chat/input/index.module.css
+++ b/src/component/chat/input/index.module.css
@@ -15,11 +15,30 @@
   border-radius: 5px;
 }
 .right {
-  width: 80px;
-  padding-left: 15px;
+  margin-left: 10px;
   display: flex;
   justify-content: space-around;
   align-items: flex-end;
+}
+.right svg {
+  margin: 0 3px;
+  fill: #b3b7c2;
+}
+.right svg:hover {
+  cursor: pointer;
+}
+.btn {
+  padding: 3px 7px;
+  margin: 0 3px;
+  border-radius: 5px;
+  background-color: rgba(43, 255, 0, 0.877);
+  color: white;
+  letter-spacing: 2px;
+  border: none;
+}
+.btn:hover {
+  cursor: pointer;
+  fill: #10b5f2;
 }
 .testHeight {
   position: absolute;
@@ -27,4 +46,46 @@
   line-height: 20px;
   max-height: 80px;
   opacity: 0;
+}
+.hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+.menu {
+  box-sizing: content-box;
+  border: 1px solid #ccc;
+  padding: 7px;
+  position: absolute;
+  right: 9px;
+  bottom: 100%;
+  transition: all 1s;
+  border-radius: 11px;
+  background-color: white;
+}
+.menu ul {
+  text-decoration: none;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.menu ul li {
+  padding: 7px 4px;
+  text-align: center;
+  border-radius: 9px;
+  position: relative;
+}
+.menu ul li .file {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.menu ul li .file:hover {
+  cursor: pointer;
+}
+.menu ul li:hover {
+  background-color: rgba(244, 244, 244);
+  cursor: pointer;
 }
