--- a/src/component/chat/input/index.module.less
+++ b/src/component/chat/input/index.module.less
@@ -16,11 +16,30 @@
     border-radius: 5px;
 }
 .right {
-    width: 80px;
-    padding-left: 15px;
+    margin-left: 10px;
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
+    svg {
+        margin: 0 3px;
+        fill: rgb(179, 183, 194);
+        &:hover {
+            cursor: pointer;
+        }
+    }
+}
+.btn {
+    padding: 3px 7px;
+    margin: 0 3px;
+    border-radius: 5px;
+    background-color: rgba(43, 255, 0, 0.877);
+    color: white;
+    letter-spacing: 2px;
+    border: none;
+    &:hover{
+        cursor: pointer;
+        fill: rgb(16, 181, 242);
+    }
 }
 .testHeight {
     position: absolute;
@@ -28,4 +47,48 @@
     line-height: @height; // 每一行的高度
     max-height: 80px;
     opacity: 0;
+}
+.hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+.menu {
+    @padding: 7px;
+    box-sizing: content-box;
+    border: 1px solid #ccc;
+    padding: @padding;
+    position: absolute;
+    right: 9px;
+    bottom: 100%;
+    transition: all 1s;
+    border-radius: 11px;
+    background-color: white;
+    ul {
+        text-decoration: none;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        li {
+            padding: @padding 4px;
+            // color: rgb(165, 164, 164);
+            text-align: center;
+            border-radius: 9px;
+            position: relative;
+            .file {
+                opacity: 0;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+            &:hover {
+                background-color: rgba(244, 244, 244);
+                cursor: pointer;
+            }
+        }
+    }
 }
