--- a/src/component/chat_list/index.module.less
+++ b/src/component/chat_list/index.module.less
@@ -1,10 +1,10 @@
 .main {
     flex-grow: 21;
-    background-color: rgb(128, 235, 78);
     display: flex;
     flex-direction: column;
 }
 .section {
     overflow-y: auto;
     flex: 1;
+    // background-color: rgb(244, 248, 251);;
 }
