--- a/src/component/header/index.module.css
+++ b/src/component/header/index.module.css
@@ -7,6 +7,10 @@
   color: white;
   border-bottom: 1px solid #ccc;
   padding: 0 10px;
+  background: linear-gradient(to right, #2176ed, #68aaf4);
+}
+.header svg:hover {
+  cursor: pointer;
 }
 .title {
   justify-self: center;
