--- a/src/component/main/index.module.css
+++ b/src/component/main/index.module.css
@@ -5,8 +5,8 @@
   width: 375px;
   border-radius: 10px;
   overflow: hidden;
-  background-color: aqua;
-  margin-right: 8px;
+  background: #f4f8fb;
+  filter: drop-shadow(2px 2px 10px black);
 }
 @media screen and (max-height: 650px) {
   #main {
