--- a/src/component/main/index.module.less
+++ b/src/component/main/index.module.less
@@ -5,11 +5,11 @@
     width: 375px;
     border-radius: 10px;
     overflow: hidden;
-    background-color: aqua;
-    margin-right: 8px;
+    background: rgb(244, 248, 251);
+    filter: drop-shadow(2px 2px 10px black);
 }
 
-@media screen and (max-height: 650px) {
+@media screen and (max-height: 650px ) {
     #main {
         height: 100%;
     }
