--- a/src/component/user/header/index.module.css
+++ b/src/component/user/header/index.module.css
@@ -3,13 +3,23 @@
   height: 110px;
   background-image: linear-gradient(to right, #1b83d0, #f0b5a7);
 }
-.top img {
+.top .img {
   height: 90px;
   width: 90px;
   border-radius: 50%;
   position: absolute;
   left: calc(50% - 90px / 2);
   bottom: -20px;
+}
+.top .file {
+  height: 90px;
+  width: 90px;
+  border-radius: 50%;
+  position: absolute;
+  left: calc(50% - 90px / 2);
+  bottom: -20px;
+  opacity: 0;
+  cursor: pointer;
 }
 .name {
   margin-bottom: 10px;
@@ -39,4 +49,13 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   padding-right: 5px;
+}
+.input {
+  border-radius: 6px;
+  outline: none;
+  border: none;
+  text-indent: 3px;
+  padding: 5px;
+  width: 75%;
+  margin-left: 7px;
 }
